Rregullimi i handleRead ne fileCommandHandler